# tinyticker

./: .gitignore  .prettierrc  CHANGELOG.md  CNAME  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  pyproject.toml  style.css  tailwind.config.js  tinyticker-web.service  tinyticker.service
.github/workflows/: ci.yml  main.yml
notebooks/: Untitled.ipynb
rpi_ticker_epaper/: __main__.py  display.py  epd_2in13_V2_test.py  settings.py  ticker.py
rpi_ticker_epaper/waveshare_lib/: epd2in13_V2.py  epdconfig.py
scripts/: epd_2in13_V2_test.py  test_display.py
startup_scripts/: README.md  buttons_2in7.py
systemd/: tinyticker-qrcode.service  tinyticker-web.service  tinyticker.service
tests/data/: config.json  config_invalid.json  config_missing_sequence_field.json  crypto_historical.pkl  crypto_tick_historical.pkl  stock_historical.pkl  stock_tick_historical.pkl
tests/integration/: test_tinyticker.py
tests/unit/: __init__.py  conftest.py  test_config.py  test_display.py  test_layouts.py  test_sequence.py  test_ticker.py  test_utils.py  utils.py
tests/unit/layouts/: test_layouts.py  test_utils.py  utils.py
tests/unit/tickers/: __init__.py  test_crypto.py  test_stock.py  utils.py
tests/unit/web/: test_app.py  test_command.py
tinyticker/: __init__.py  __main__.py  config.py  display.py  layouts.py  paths.py  sequence.py  settings.py  socket.py  ticker.py  utils.py
tinyticker/layouts/: __init__.py  big_logo.py  big_price.py  default.py  logo.py  register.py  utils.py
tinyticker/tickers/: __init__.py  _base.py  crypto.py  stock.py
tinyticker/waveshare_lib/: __init__.py  _base.py  device.py  epd2in13.py  epd2in13_V2.py  epd2in13_V3.py  epd2in13_V4.py  epd2in13b_V3.py  epd2in13b_V4.py  epd2in13bc.py  epd2in7.py  epd2in7_V2.py  epd7in5_V2.py  epd7in5b_V2.py  epdconfig.py  models.py
tinyticker/web/: __init__.py  __main__.py  app.py  command.py  startup.py  web.py
tinyticker/web/templates/: index.html  logfiles.html  startup.html
tinyticker/web/templates/js/: index.js
tinyticker/web/templates/public/: site.webmanifest
