[tool.poetry]
name = "tinyticker"
version = "0.2.0"
description = "A tiny Raspberry Pi powered ePaper ticker."
authors = ["Loic Coyle <loic.coyle@hotmail.fr>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/loiccoyle/tinyticker"
keywords = ["raspberry-pi", "ticker", "stock", "crypto", "epaper"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
"RPi.GPIO" = "^0.7.0"
spidev = "^3.5"
Pillow = "^9.0.0"
cryptocompare = "^0.7.5"
pandas = "^1.3.5"
matplotlib = "^3.5.1"
mplfinance = "^0.12.7-alpha.17"
Flask = "^2.0.2"
yfinance = "^0.1.63"
qrcode = "^7.3.1"
packaging = "^21.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
tinyticker = 'tinyticker.__main__:main'
tinyticker-web = 'tinyticker.web.__main__:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
